--- a/css/app.css
+++ b/css/app.css
@@ -79,7 +79,7 @@ b {
   display: flex;
   align-items: center;
   position: relative;
-  z-index: 2 !important;
+  z-index: 1;
 }
 .app-header.position-sticky, .app-header.sticky {
   top: 0;
@@ -90,20 +90,18 @@ b {
   font-size: 125%;
 }
 .app-header img.app-title {
-  max-width: 10rem;
+  width: 10rem;
 }
 
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-end;
+  /* align-items: flex-end; */
   margin: 0.5rem 0;
   gap: 0.5rem;
 }
 .flex-container > * {
-  align-self: flex-start;
-}
-.flex-container .btn {
+  /* align-self: flex-start; */
   margin-bottom: 0;
 }
 
@@ -562,6 +560,14 @@ option[disabled]:first-of-type {
 .input-container input + input, .input-container + .input-container {
   margin-top: 0.5rem;
 }
+.input-container:has(input:invalid) {
+  color: var(--danger);
+}
+.input-container:has(input:focus:empty)::before,
+.input-container:has(input:focus:empty) .label, .input-container:has(input:focus:placeholder-shown)::before,
+.input-container:has(input:focus:placeholder-shown) .label {
+  background-color: var(--primary);
+}
 .input-container::before,
 .input-container .label {
   content: attr(data-label);
@@ -836,7 +842,7 @@ option[disabled]:first-of-type {
   gap: 0.5rem;
   justify-content: center;
   align-items: center;
-  border: none;
+  /* border: none; */
 }
 .btn:focus {
   outline: 1px solid hsl(var(--secondary-hs), calc(var(--secondary-l) + 50%));
@@ -903,37 +909,12 @@ table {
 .table-container {
   display: flex;
   flex-direction: column;
+  padding: 0 0 1rem;
   gap: 1rem;
   width: 100%;
   overflow: scroll;
   /* color: var(--black); */
   /* background-color: var(--white); */
-}
-.table-container.is-table-sticky {
-  display: flex;
-}
-.table-container.is-sticky {
-  overflow-x: scroll;
-  padding: 0 0 1rem;
-}
-.table-container.is-sticky .sticky {
-  /* &::after {
-    content: '';
-    display: block;
-    box-shadow: 5px 0px 10px -5px rgba(0, 0, 0, 0.5);
-    width: 5%;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    border-right: thin solid var(--border-color)
-  } */
-}
-.table-container.is-sticky .row {
-  flex-wrap: nowrap;
-}
-.table-container.is-sticky thead th {
-  min-width: 15vw;
 }
 .table-container.compact {
   font-size: 90%;
@@ -959,10 +940,30 @@ table {
 .table-container.compact > .row [class*=col] {
   padding: 0.25rem;
 }
+.table-container .sticky {
+  /* &::after {
+      content: '';
+      display: block;
+      box-shadow: 5px 0px 10px -5px rgba(0, 0, 0, 0.5);
+      width: 5%;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      border-right: thin solid var(--border-color)
+    } */
+}
+.table-container .row {
+  flex-wrap: nowrap;
+}
+.table-container thead th {
+  min-width: 15vw;
+}
 .table-container thead,
 .table-container .table-header {
   /* color: hsl(var(--secondary-hs), calc(var(--secondary-l) + 10%)); */
   font-weight: bold;
+  width: fit-content;
 }
 .table-container thead.sticky-header th,
 .table-container .table-header.sticky-header th {
@@ -994,9 +995,6 @@ table {
 .table-container > .row [class*=col],
 .table-container .scrollable > .row [class*=col] {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
 }
 .table-container tr td,
 .table-container tr th,
@@ -1010,6 +1008,32 @@ table {
   margin-bottom: 0;
   padding: 1rem;
   background-color: inherit;
+  border-radius: 0;
+  min-width: 25%;
+}
+.table-container tr td:first-of-type,
+.table-container tr th:first-of-type,
+.table-container tr [class*=col]:first-of-type,
+.table-container > .row td:first-of-type,
+.table-container > .row th:first-of-type,
+.table-container > .row [class*=col]:first-of-type,
+.table-container .scrollable > .row td:first-of-type,
+.table-container .scrollable > .row th:first-of-type,
+.table-container .scrollable > .row [class*=col]:first-of-type {
+  border-top-left-radius: inherit;
+  border-bottom-left-radius: inherit;
+}
+.table-container tr td:last-of-type,
+.table-container tr th:last-of-type,
+.table-container tr [class*=col]:last-of-type,
+.table-container > .row td:last-of-type,
+.table-container > .row th:last-of-type,
+.table-container > .row [class*=col]:last-of-type,
+.table-container .scrollable > .row td:last-of-type,
+.table-container .scrollable > .row th:last-of-type,
+.table-container .scrollable > .row [class*=col]:last-of-type {
+  border-top-right-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
 .table-container tr td.sticky,
 .table-container tr th.sticky,
@@ -1111,6 +1135,12 @@ table {
   flex-direction: column;
 }
 
+.flex-start {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+}
+
 .flex-item,
 .flex-card {
   position: relative;
@@ -1206,15 +1236,19 @@ table {
   letter-spacing: 0.5rem;
 }
 
-.title-strick {
+.title-strick,
+.text-strick-line {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.title-strick::content {
+.title-strick::content,
+.text-strick-line::content {
   width: 100%;
 }
-.title-strick::before, .title-strick::after {
+.title-strick::before, .title-strick::after,
+.text-strick-line::before,
+.text-strick-line::after {
   content: "";
   display: inline-block;
   margin: 0 0.5rem;
@@ -1224,6 +1258,24 @@ table {
   background-color: currentColor;
 }
 
+.card {
+  position: relative;
+}
+.card > * {
+  position: relative;
+  z-index: 1;
+}
+.card::before {
+  content: "";
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  border-radius: inherit;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
 .card:not(.flat) {
   overflow: unset;
   border: none;
@@ -1232,16 +1284,7 @@ table {
   position: relative;
 }
 .card:not(.flat)::before {
-  content: "";
-  display: block;
-  height: 100%;
-  width: 100%;
-  position: absolute;
   box-shadow: var(--card-shadow);
-  border-radius: inherit;
-  top: 0;
-  left: 0;
-  z-index: 0;
 }
 .card + .card {
   margin-top: 1rem;
@@ -1315,7 +1358,7 @@ table {
   display: flex;
   /* align-items: center; */
   /* justify-content: space-between; */
-  gap: 0.5rem;
+  gap: 0.25rem;
   padding: 0 1rem;
   cursor: pointer;
 }
@@ -1481,6 +1524,7 @@ table {
   top: 0;
   left: 0;
   z-index: 0;
+  position: absolute !important;
   object-fit: cover;
   z-index: 0 !important;
 }
@@ -1555,8 +1599,7 @@ section {
     text-align: right;
   }
 
-  .tabular .row .table-header,
-.table-container .row .table-header {
+  .table-container .row .table-header {
     display: none;
   }
 }
@@ -1591,30 +1634,22 @@ section {
     padding: 0;
   }
 
-  .tabular:not(.is-sticky) .row.table-header,
-.table-container:not(.is-sticky) .row.table-header {
+  .table-container:not(.is-sticky) .row.table-header {
     display: none;
   }
-  .tabular.is-sticky .row .table-header,
-.table-container.is-sticky .row .table-header {
+  .table-container.is-sticky .row .table-header {
     display: none;
   }
-  .tabular.is-sticky .row [class*=col],
-.table-container.is-sticky .row [class*=col] {
+  .table-container.is-sticky .row [class*=col] {
     margin: 0;
   }
-  .tabular > .row .table-header,
-.tabular .scrollable > .row .table-header,
-.table-container > .row .table-header,
+  .table-container > .row .table-header,
 .table-container .scrollable > .row .table-header {
     margin-right: 1rem;
   }
-  .tabular > .row [class*=col],
-.tabular .scrollable > .row [class*=col],
-.table-container > .row [class*=col],
+  .table-container > .row [class*=col],
 .table-container .scrollable > .row [class*=col] {
     flex-direction: row;
-    flex-wrap: nowrap;
     justify-content: flex-start;
     margin: 0.5rem 0;
   }
@@ -1624,8 +1659,17 @@ section {
   /* .app-logo {
     width: 7.5rem;
   } */
+  .item-list:not(.has-connector) {
+    gap: 1rem;
+  }
   .item-list .item {
     flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .table-container td,
+.table-container [class*=col] {
+    /* min-width: 25vw; */
   }
 }
 
