--- a/styles/app.scss
+++ b/styles/app.scss
@@ -82,7 +82,7 @@ b {
   display: flex;
   align-items: center;
   position: relative;
-  z-index: 2 !important;
+  z-index: 1;
 
   &.position-sticky,
   &.sticky {
@@ -95,7 +95,7 @@ b {
     font-size: 125%;
 
     @include unify-selector(img, &) {
-      max-width: 10rem;
+      width: 10rem;
     }
   }
 }
@@ -103,17 +103,18 @@ b {
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-end;
+  /* align-items: flex-end; */
   margin: 0.5rem 0;
   gap: 0.5rem;
 
   >* {
-    align-self: flex-start;
-  }
-
-  .btn {
+    /* align-self: flex-start; */
     margin-bottom: 0;
   }
+
+  // .btn {
+  //   margin-bottom: 0;
+  // }
 }
 
 .page-header {
@@ -647,10 +648,25 @@ option[disabled]:first-of-type {
   width: 100%;
   /* margin-bottom: 1rem; */
   text-align: left;
+  $input-container: &;
 
   input+input,
   &+.input-container {
     margin-top: 0.5rem;
+  }
+
+  &:has(input:invalid) {
+    color: var(--danger);
+  }
+
+  &:has(input:focus:empty),
+  &:has(input:focus:placeholder-shown) {
+
+    &::before,
+    .label {
+      // @include append-selector() {
+      background-color: var(--primary);
+    }
   }
 
   &::before,
@@ -952,7 +968,7 @@ option[disabled]:first-of-type {
   gap: 0.5rem;
   justify-content: center;
   align-items: center;
-  border: none;
+  /* border: none; */
 
   &:focus {
     outline: 1px solid hsl(var(--secondary-hs), calc(var(--secondary-l) + 50%));
@@ -1039,44 +1055,13 @@ table {
 .table-container {
   display: flex;
   flex-direction: column;
+  padding: 0 0 1rem;
   gap: 1rem;
   width: 100%;
   overflow: scroll;
   /* color: var(--black); */
   /* background-color: var(--white); */
-  $table-parent: &;
-
-  &.is-table-sticky {
-    display: flex;
-  }
-
-  &.is-sticky {
-    overflow-x: scroll;
-    padding: 0 0 1rem;
-
-    .sticky {
-
-      /* &::after {
-        content: '';
-        display: block;
-        box-shadow: 5px 0px 10px -5px rgba(0, 0, 0, 0.5);
-        width: 5%;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        position: absolute;
-        border-right: thin solid var(--border-color)
-      } */
-    }
-
-    .row {
-      flex-wrap: nowrap;
-    }
-
-    thead th {
-      min-width: 15vw;
-    }
-  }
+  $table-container: &;
 
   &.compact {
     font-size: 90%;
@@ -1103,10 +1088,35 @@ table {
     }
   }
 
+  .sticky {
+
+    /* &::after {
+        content: '';
+        display: block;
+        box-shadow: 5px 0px 10px -5px rgba(0, 0, 0, 0.5);
+        width: 5%;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        border-right: thin solid var(--border-color)
+      } */
+  }
+
+  .row {
+    flex-wrap: nowrap;
+  }
+
+  thead th {
+    min-width: 15vw;
+  }
+
+
   thead,
   .table-header {
     /* color: hsl(var(--secondary-hs), calc(var(--secondary-l) + 10%)); */
     font-weight: bold;
+    width: fit-content;
 
     &.sticky-header {
       th {
@@ -1139,9 +1149,9 @@ table {
 
     [class*=col] {
       display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: center;
+      // flex-direction: column;
+      // align-items: flex-start;
+      // justify-content: center;
 
     }
 
@@ -1151,6 +1161,18 @@ table {
       margin-bottom: 0;
       padding: 1rem;
       background-color: inherit;
+      border-radius: 0;
+      min-width: 25%;
+
+      &:first-of-type {
+        border-top-left-radius: inherit;
+        border-bottom-left-radius: inherit;
+      }
+
+      &:last-of-type {
+        border-top-right-radius: inherit;
+        border-bottom-right-radius: inherit;
+      }
 
       &.sticky {
         left: 0;
@@ -1235,6 +1257,12 @@ table {
 .flex-center {
   @include flex-center;
   flex-direction: column;
+}
+
+.flex-start {
+  display: flex;
+  justify-content: start;
+  align-items: start;
 }
 
 .flex-item,
@@ -1331,7 +1359,8 @@ table {
   }
 }
 
-.title-strick {
+.title-strick,
+.text-strick-line {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1353,6 +1382,7 @@ table {
 }
 
 .card {
+  @include before-content;
 
   &:not(.flat) {
     overflow: unset;
@@ -1363,16 +1393,7 @@ table {
     }
 
     &::before {
-      content: '';
-      display: block;
-      height: 100%;
-      width: 100%;
-      position: absolute;
       box-shadow: var(--card-shadow);
-      border-radius: inherit;
-      top: 0;
-      left: 0;
-      z-index: 0;
     }
   }
 
@@ -1472,7 +1493,7 @@ table {
     display: flex;
     /* align-items: center; */
     /* justify-content: space-between; */
-    gap: 0.5rem;
+    gap: 0.25rem;
     padding: 0 1rem;
     cursor: pointer;
 
@@ -1667,6 +1688,7 @@ table {
 
 .img-bg {
   @include absolute-content;
+  position: absolute !important;
   object-fit: cover;
   z-index: 0 !important;
 }
@@ -1737,7 +1759,6 @@ section {
     }
   }
 
-  .tabular,
   .table-container {
     // font-size: 90%;
 
@@ -1781,7 +1802,6 @@ section {
     }
   }
 
-  .tabular,
   .table-container {
 
     &:not(.is-sticky) .row.table-header {
@@ -1809,7 +1829,7 @@ section {
 
       [class*=col] {
         flex-direction: row;
-        flex-wrap: nowrap;
+        // flex-wrap: nowrap;
         justify-content: flex-start;
         margin: 0.5rem 0;
       }
@@ -1824,8 +1844,22 @@ section {
     width: 7.5rem;
   } */
   .item-list {
+
+    &:not(.has-connector) {
+      gap: 1rem;
+    }
+
     .item {
       flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
+
+  .table-container {
+
+    td,
+    [class*=col] {
+      /* min-width: 25vw; */
     }
   }
 }
