--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,10 +4,10 @@
 */
 @import 'variables';
 @import 'external/bootstrap.css';
-@import 'app.css';
 @import 'animations.css';
 @import 'colors.css';
 @import 'sizes.css';
+@import 'app.css';
 
 :root {
   --font-size: #{$font-size};
@@ -23,8 +23,8 @@ body {
 
 /* Mobile --> BELOW */
 @media (max-width:575.98px) {
-  body {
-    font-size: 0.8rem;
+  :root {
+    --font-size: calc(var(--font-size)/1.25);
   }
 }
 
