--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -11,8 +11,11 @@
   position: fixed !important;
   left: 0;
   top: 0;
+  padding: 0 !important;
+  margin: 0 !important;
   height: 100% !important;
   width: 100% !important;
+  transition: background-color 0.5s ease-in;
   border-radius: 0 !important;
   z-index: -1;
 
@@ -34,33 +37,23 @@
     }
   }
 
-  &:not(:checked) {
-
-    &,
-    &::before,
-    &::after {
-      background-color: transparent !important;
-    }
-  }
 }
 
 .appmenu-toggle {
   position: relative;
   /* font-size: 120%; */
   margin-bottom: 0;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 
 .nav-menu {
   /* border-top: 1px solid; */
-  display: flex !important;
+  width: 100%;
+  height: 100%;
+  display: flex;
   font-size: 120%;
   gap: 0.5rem;
-
-  &:not(.h) {
-    flex-direction: column
-  }
 
   .nav-item {
     display: flex;
@@ -76,8 +69,8 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .sidemenu {
@@ -86,8 +79,8 @@
   position: relative;
   width: 30%;
   height: 100%;
+  margin: 0;
   flex: 1 1 30%;
-  min-height: 100vh;
   /* border-right: thin solid var(--secondary); */
   transition: width 0.5s, flex-basis 0.5s, transform 0.5s, opacity 0.25s;
   overflow: hidden;
@@ -101,10 +94,10 @@
     background-color: currentColor
   }
 
-  .sidemenu-header {
+  .menu-header {
     padding: 1rem;
 
-    .sidemenu-logo {
+    .menu-logo {
       display: none;
     }
 
@@ -114,6 +107,7 @@
   }
 
   .nav-menu {
+    flex-direction: column;
 
     .nav-item {
       @include before-content;
@@ -150,8 +144,22 @@
   }
 
   footer,
-  .sidemenu-footer {
+  .menu-footer {
     margin-top: auto;
+  }
+}
+
+.fullmenu {
+  display: flex;
+  transition: transform 0.5s;
+
+  .menu-header {
+    display: flex;
+  }
+
+  .nav-menu {
+    align-items: center;
+    justify-content: center;
   }
 }
 
@@ -163,9 +171,11 @@
   position: relative;
   width: 100%;
   height: 100%;
+  margin: 0;
   flex: 1 1 100%;
   transition: width 0.5s;
   overflow: hidden;
+  z-index: 0;
 
   footer {
     background-color: var(--secondary);
@@ -217,17 +227,38 @@
 
 /* Above <---> Mobile */
 @media (min-width:576px) {
+  .fullmenu {
+    align-items: center;
 
-  .appmenu-trigger:not(:checked) {
+    .menu-header {
+      .app-logo {
+        display: none;
+      }
+    }
+  }
 
-    ~,
-    ~* {
-      .page {
-        border-left: thin solid;
-        @include before-content;
+  .appmenu-trigger {
 
-        &::before {
-          box-shadow: 0 0 2.5rem -1.75rem hsla(var(--black-hs), var(--black-l), 0.125);
+    &,
+    &::before,
+    &::after {
+      background-color: transparent !important;
+    }
+
+    &:not(:checked) {
+
+      ~,
+      ~* {
+        .page {
+          /* TODO: Use this on Sibemenu Type 2 - Page overlaps Sidemenu */
+          /* 
+          border-left: thin solid;
+          @include before-content;
+
+          &::before {
+            box-shadow: 0 0 2.5rem -1.75rem hsla(var(--black-hs), var(--black-l), 0.125);
+          } */
+          /* ---- */
         }
       }
     }
@@ -259,12 +290,12 @@
           width: 15%;
           flex-basis: 15%;
 
-          .sidemenu-header {
+          .menu-header {
             .app-logo {
               display: none;
             }
 
-            .sidemenu-logo {
+            .menu-logo {
               display: inline-block;
             }
 
@@ -283,13 +314,24 @@
             margin-right: 0;
           }
 
-          .sidemenu-header,
-          .sidemenu-footer,
-          .nav-menu .nav-item {
-            .label {
-              opacity: 0;
-              transform: translateX(100%);
-              position: absolute;
+          .menu-header,
+          .menu-footer,
+          .nav-menu {
+
+            .nav-item,
+            .nav-title {
+              .label {
+                opacity: 0;
+                transform: translateX(100%);
+                position: absolute;
+              }
+            }
+
+            .nav-title {
+              border-bottom: thin solid;
+
+              // padding: 0 !important;
+              &::before {}
             }
           }
         }
@@ -322,12 +364,32 @@
 /* Mobile <--> BELOW */
 @media (max-width:575.98px) {
   .appmenu-trigger {
-    transition: background-color 0.5s ease-in;
+
+    &:not(:checked) {
+
+      &,
+      &::before,
+      &::after {
+        background-color: transparent !important;
+      }
+
+      ~,
+      ~* {
+
+        .app-header .fullmenu {
+          .nav-menu {
+            display: none;
+            /* transform: translateY(-100%); */
+            /* opacity: 0; */
+          }
+        }
+      }
+    }
 
     &:checked {
       width: 100vw;
       background-color: hsla(var(--black-hs), var(--black-l), 0.2);
-      z-index: 3;
+      z-index: 1;
 
       ~,
       ~* {
@@ -344,16 +406,34 @@
 
         // 2. Fullmenu
         .fullmenu {
-          @include absolute-content;
           position: fixed;
-          background-color: var(--primary);
-          color: var(--primary-c);
-          align-items: center;
-          justify-content: center;
           flex-direction: column;
+          transform: translateY(0);
+          opacity: 1;
+          font-size: 125%;
+          background-color: var(--secondary);
+          color: var(--secondary-c);
+
+          .btn {
+            color: var(--secondary-c) !important;
+
+            &:hover {
+              background-color: var(--secondary-c) !important;
+              color: var(--secondary) !important;
+            }
+          }
+
+          .menu-header {
+            order: -1;
+            padding: 1rem;
+          }
+
+          .nav-menu {
+            flex-direction: column;
+          }
         }
 
-        .appmenu-toggle {
+        .page .app-header .appmenu-toggle {
           transform: translateX(-50%)
         }
       }
@@ -370,9 +450,19 @@
     transform: translateX(-100%);
     opacity: 0;
     box-shadow: 0 0 50px hsla(var(--black-hs), var(--black-l), 0.25);
-    z-index: 3;
+    z-index: 2;
   }
 
+  .fullmenu {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* transform: translateY(-100%); */
+    /* opacity: 0; */
+    z-index: 2;
+
+  }
 
   .page {
 
